@@ -1,3 +1,14 @@
+2011-10-28  Csaba Osztrogonác  <ossy@webkit.org>
+
+        [Qt] Adapt to QSG* to QQuick* API change in qtdeclarative
+        https://bugs.webkit.org/show_bug.cgi?id=70494
+
+        One more buildfix. (unreviewed)
+
+        * UIProcess/API/qt/qtouchwebpage.cpp:
+        (computeEffectiveOpacity):
+        (QTouchWebPage::itemChange):
+
 2011-10-28  Simon Hausmann  <simon.hausmann@nokia.com>
 
         [Qt] Adapt to QSG* to QQuick* API change in qtdeclarative
